python/src/rabbitmq/manifests/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: rabbitmq
  labels:
    app: rabbitmq

spec:
  replicas: 3
  selector:
    matchLabels:
      app: rabbitmq
  serviceName: rabbitmq-service
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq-container
          image: rabbitmq:4.0.3-management
          ports:
            - name: http
              protocol: TCP
              containerPort: 15672
            - name: amq
              protocol: TCP
              containerPort: 5672
          volumeMounts:
            - mountPath: /var/lib/rabbitmq
              name: rabbitmq-volume
      volumes:
        - name: rabbitmq-volume
          persistentVolumeClaim:
            claimName: rabbitmq-pvc
