python/src/rabbitmq/manifests/rabbitmq-service.yml
apiVersion: v1
kind: Service

metadata:
  name: rebbitmq-service
  labels:
    app: rabbitmq

spec:
  type: ClusterIP

  selector:
    app: rabbitmq

  ports:
    - name: http
      port: 5671
      targetPort: 5672
      protocol: TCP
